--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hover to Change Zeros with Pointer Effect</title>
+    <title>I am zer0</title>
     <style>
         body {
             margin: 0;
