--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hover to Change Zeros with Pointer Effect</title>
+    <title>I am zer0</title>
     <style>
         body {
             margin: 0;
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-<button id="resetButton">Reset Grid</button>
+<button id="00000">Reset Grid</button>
 <div id="container"></div>
 
 <script>
